css/components.css
/* header */
.header {
  display: flex;
  align-items: center;
  height: 60px;

  width: 100%;
  max-width: 1152px;
  margin: 0 auto;
  padding: 0 var(--container-padding);
}

.header__logout {
  margin-left: auto;
  display: none;
}

.header__logout.is-visible {
  display: block;
}

.header__logo--compact {
  width: 20px;
  height: auto;
}

.header__logout img {
  width: 28px;
  height: auto;
}

.header__logo--full {
  display: none;
}

@media (min-width: 768px) {
  .header__logo--compact {
    display: none;
  }

  .header__logo--full {
    display: block;
    width: 70px;
  }
}

/* Card */
.card {
  display: flex;
  flex-direction: column;
  position: relative;
  max-width: 470px;
  margin: var(--space-3) auto;
}

.card__header {
  display: flex;
  margin: var(--space-1) var(--space-2);
}

.card__header img {
  width: 40px;
  height: 40px;
}

.card__username {
  font-weight: var(--font-w-medium);
}

.btn-follow {
  margin-left: auto;
}

.card__author,
.card__actions,
.card__caption,
.card__comments {
  margin: 0 var(--space-2);
}

.card__caption {
  line-height: var(--line-heigh-comments);
}

.post__username {
  font-weight: var(--font-w-semibold);
}

.post__count {
  font-size: var(--font-size-200);
}

.card__avatar {
  border-radius: 50%;
}

.card__content {
  aspect-ratio: 4 / 5;
  width: 100%;
  overflow: hidden;
}

.card__actions {
  display: inline-flex;
  gap: var(--space-2);
  margin-bottom: var(--space-3);
}

.post__comment,
.post__like {
  display: inline-flex;
  align-items: center;
  gap: var(--space-1);
  margin-top: var(--space-2);
}

.card__content img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.post__like-anim {
  position: absolute;
  display: none;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* Nav menu */
.nav {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--color-brand-dark);
  color: var(--color-brand-lime);
  min-height: 64px;
  width: 100%;
}

.nav__list {
  display: flex;
  justify-content: space-around;
  width: 100%;
}

li {
  display: inline-flex;
}

.nav__list span {
  display: none;
}

.nav__list li a {
  display: inline-flex;
}

@media (min-width: 768px) {
  .nav {
    position: fixed;
    left: 0;
    top: 0;
    height: 100vh;
    width: 150px;
    flex-direction: column;
  }

  .nav__list {
    flex-direction: column;
    gap: var(--space-14);
    margin-left: var(--space-4);
  }

  .nav__list a {
    display: inline-flex;
    align-items: center;
    gap: var(--space-2);
  }

  .nav__list img {
    min-width: 20px;
  }

  .nav__list span {
    display: inline;
  }
}

/* Footer  */
footer {
  background-color: var(--color-brand-dark);
  color: var(--color-brand-lime);
}
.footer__inner {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  max-width: 1152px;
  height: 240px;
  margin: 0 auto;
  padding: var(--container-padding) var(--container-padding);
}

.footer__logo {
  width: 100%;
  max-width: 70px;
  height: auto;
}

.footer__nav {
  display: flex;
  flex-direction: column;
}

/* Buttons  */

.btn {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  background: var(--color-gradient-main);
  font-weight: var(--font-w-medium);
  height: 50px;
  max-width: 430px;
  width: 100%;
  border-radius: 8px;
}

.btn__text {
  display: inline-block;
  transition: transform 0.4s ease;
}

.btn:hover .btn__text {
  transform: scale(1.06);
}

.btn-outline {
  font-weight: var(--font-w-medium);
  padding: 0 var(--space-7);
  max-height: 34px;

  border: 1px solid transparent;
  border-radius: 999px;

  background:
    linear-gradient(#fbffe5, #fbffe5) padding-box,
    var(--color-gradient-main) border-box;
}

/* input fields */

input,
textarea {
  background-color: rgba(234, 253, 126, 0.1);
  height: 50px;
  width: 100%;
  padding: 0 var(--space-4);
  border-radius: 8px;
  outline: 1px solid var(--color-neutral-100);
}

input:focus,
textarea:focus {
  outline: none;
  border: 1px solid transparent;
  background-image:
    linear-gradient(#fbffe5, #fbffe5), var(--color-gradient-main);
  background-origin: border-box;
  background-clip: padding-box, border-box;
}

textarea {
  padding: var(--space-3) var(--space-4);
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  overflow: hidden;
  clip: rect(0 0 0 0);
}

.has-error {
  outline: 1px solid var(--color-error);
}

.txt {
  font-size: var(--font-size-200);
}

.txt--error {
  color: var(--color-error);
}

.txt--help {
  color: var(--color-brand-lavender);
  background-color: rgba(175, 152, 239, 0.1);
  padding: 5px 10px;
  border-radius: 8px;
  border: 1px solid var(--color-brand-lavender);
}

/* Links */
.links,
.links:visited {
  color: var(--color-brand-lavender);
}

.links:hover {
  text-decoration: underline;
}

